setup expo router

--- a/app.json
+++ b/app.json
@@ -24,7 +24,20 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
+    },
+    "plugins": [
+      [
+        "expo-router",
+        {
+          "root": "./src/app",
+          "asyncRoutes": {
+            "web": true,
+            "default": "development"
+          }
+        }
+      ]
+    ]
   }
 }
