--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expo-router-asyncroute",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "expo": "~50.0.0-preview.3",
+    "expo-constants": "~15.4.1",
+    "expo-linking": "~6.2.1",
+    "expo-router": "~3.3.1",
     "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.0",
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "~3.27.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
