--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo export -p web && cp src/manifest.json dist/manifest.json && cp src/96.png dist/assets/96.png",
+    "deploy:web": "npx wrangler pages deploy ./dist"
   },
   "dependencies": {
     "expo": "~50.0.0-preview.3",
